<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white2">

    <TextView
        android:id="@+id/title_search_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/amatic_sc_bold"
        android:letterSpacing="-0.04"
        android:maxEms="40"
        android:maxLines="3"
        android:text="@string/btn_search_tag"
        android:textColor="@color/black"
        android:textSize="46sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_difficult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white1"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_below="@+id/title_search_tags">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/title_difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_sc_bold"
                android:letterSpacing="-0.04"
                android:padding="10dp"
                android:text="@string/filter_difficult"
                android:textColor="@color/black"
                android:textSize="33sp" />


            <Button
                android:id="@+id/tag_difficult_view_easy"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/title_difficult"
                android:layout_alignStart="@+id/title_difficult"
                android:layout_marginEnd="7dp"
                android:text="@string/tag_difficult_easy"
                android:textColor="@color/black"
                app:backgroundTint="@color/beige" />

            <Button
                android:id="@+id/tag_difficult_view_advance"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="7dp"
                android:layout_alignTop="@+id/tag_difficult_view_easy"
                android:layout_toEndOf="@+id/tag_difficult_view_easy"
                android:text="@string/tag_difficult_advanced"
                android:textColor="@color/black"
                app:backgroundTint="@color/beige"/>

            <Button
                android:id="@+id/tag_difficult_view_hard"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_difficult_view_advance"
                android:layout_toEndOf="@+id/tag_difficult_view_advance"
                android:text="@string/tag_difficult_hard"
                android:textColor="@color/black"
                app:backgroundTint="@color/beige" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_difficult"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/white1"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_sc_bold"
                android:letterSpacing="-0.04"
                android:padding="10dp"
                android:text="@string/filter_type"
                android:textColor="@color/black"
                android:textSize="33sp" />


            <Button
                android:id="@+id/tag_type_view_desert"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/title_type"
                android:layout_alignStart="@+id/title_type"
                android:layout_marginEnd="7dp"
                android:text="@string/tag_type_desert"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown" />

            <Button
                android:id="@+id/tag_type_view_soup"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_type_view_desert"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/tag_type_view_desert"
                android:text="@string/tag_type_soup"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown" />

            <Button
                android:id="@+id/tag_type_main_course"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_type_view_soup"
                android:layout_toEndOf="@+id/tag_type_view_soup"
                android:text="@string/tag_type_main_course"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown"/>

            <Button
                android:id="@+id/tag_type_view_breakfast"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tag_type_view_desert"
                android:layout_alignStart="@+id/tag_type_view_desert"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:text="@string/tag_type_breakfast"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown" />

            <Button
                android:id="@+id/tag_type_view_snack"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_type_view_breakfast"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/tag_type_view_breakfast"
                android:text="@string/tag_type_snack"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown"/>

            <Button
                android:id="@+id/tag_type_drink"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_type_view_snack"
                android:layout_toEndOf="@+id/tag_type_view_snack"
                android:text="@string/tag_type_drink"
                android:textColor="@color/white1"
                app:backgroundTint="@color/brown"/>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_type"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/white1"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_sc_bold"
                android:letterSpacing="-0.04"
                android:padding="10dp"
                android:text="@string/filter_time"
                android:textColor="@color/black"
                android:textSize="33sp" />


            <Button
                android:id="@+id/tag_time_view_30"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/title_time"
                android:layout_alignStart="@+id/title_time"
                android:layout_marginEnd="7dp"
                android:text="@string/tag_time_30"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/tag_time_view_60"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_time_view_30"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/tag_time_view_30"
                android:text="@string/tag_time_60"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/tag_time_view_90"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tag_time_view_30"
                android:layout_alignStart="@+id/tag_time_view_30"
                android:layout_marginTop="7dp"
                android:text="@string/tag_time_90"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/tag_time_view_100"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tag_time_view_90"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@+id/tag_time_view_90"
                android:text="@string/tag_time_more_90"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_tags_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_time"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/amatic_sc_bold"
        android:letterSpacing="-0.04"
        android:text="@string/Recipes"
        android:textColor="@color/black"
        android:textSize="46sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="24"
        android:layout_below="@id/title_tags_recipes"
        android:orientation="vertical"
        tools:listitem="@layout/item_rv_main_category"/>
</RelativeLayout>