<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".SplashActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-40dp"
                android:fontFamily="@font/amatic_sc"
                android:text="@string/now"
                android:textColor="@color/black"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/amatic_sc_bold"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="96sp" />

            <TextView
                android:id="@+id/tv_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/amatic_sc_bold"
                android:text="@string/Cooking"
                android:textColor="@color/black"
                android:textSize="96sp"/>

            <TextView
                android:id="@+id/tv_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:text="@string/btn_random"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                android:orientation="vertical"
                tools:listitem="@layout/item_rv_main_category"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>