<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SplashActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/white1"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/img_dish"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/shakshuka"
                app:siRadius="10dp" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/img_dish"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_sc_bold"
                android:letterSpacing="-0.04"
                android:maxEms="40"
                android:maxLines="3"
                android:padding="10dp"
                android:text="Греческая тарелка"
                android:textColor="@color/black"
                android:textSize="33sp" />

            <Button
                android:id="@+id/btn_look"
                style="@style/button_look"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/img_dish"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-35dp"
                android:layout_toEndOf="@+id/img_dish"
                android:letterSpacing="0.04"
                android:textFontWeight="800"
                android:background="@drawable/btn_look" />

            <ImageButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_look"
                android:layout_alignBottom="@+id/btn_look"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btn_look"
                app:srcCompat="@drawable/ic_favorite_border" />

            <TextView
                android:id="@+id/tag_difficult_view"
                style="@style/tag_difficult_view"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@+id/img_dish"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/tag_difficult_easy"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tag_type_view"
                style="@style/tag_type_view"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@+id/img_dish"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/tag_difficult_view"
                android:text="@string/tag_type_breakfast"
                android:textColor="@color/white1" />

            <TextView
                android:id="@+id/tag_time_view"
                style="@style/tag_time_view"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignTop="@+id/tag_type_view"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="7dp"
                android:layout_toEndOf="@+id/tag_type_view"
                android:text="@string/tag_time_30"
                android:textColor="@color/black" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>